--- a/index.html
+++ b/index.html
@@ -7,63 +7,31 @@
     <title>Library</title>
 </head>
 <body>
+    <dialog id="dialog">
+        <form method="dialog">
+            <p>
+                <label>
+                    Author:
+                    <input type="text" id="author" name="author" required minlength="3">
+                </label>
+            </p>
+            <p>
+                <label>
+                    Title:
+                    <input type="text" id="title" name="title" required minlength="3">
+                </label>
+            </p>
+            <p>
+                <label>
+                    Pages:
+                    <input type="number" id="page" name="page" required min="10" max="2000">
+                </label>
+            </p>
+            <input type="submit" id="close_dialog" value="Add book">
+        </form>
+    </dialog>
+    <button class="add" id="show_dialog">Add book</button>
     <div class="container">
-        <div class="card">
-            <p>Autor</p>
-            <p>Tytuł</p>
-            <p>Liczba Stron</p>
-            <button class="status">Status</button>
-            <button class="del">X</button>
-        </div>
-        <div class="card">
-            <p>Autor</p>
-            <p>Tytuł</p>
-            <p>Liczba Stron</p>
-            <button class="status">Status</button>
-            <button class="del">X</button>
-        </div>
-        <div class="card">
-            <p>Autor</p>
-            <p>Tytuł</p>
-            <p>Liczba Stron</p>
-            <button class="status">Status</button>
-            <button class="del">X</button>
-        </div>
-        <div class="card">
-            <p>Autor</p>
-            <p>Tytuł</p>
-            <p>Liczba Stron</p>
-            <button class="status">Status</button>
-            <button class="del">X</button>
-        </div>
-        <div class="card">
-            <p>Autor</p>
-            <p>Tytuł</p>
-            <p>Liczba Stron</p>
-            <button class="status">Status</button>
-            <button class="del">X</button>
-        </div>
-        <div class="card">
-            <p>Autor</p>
-            <p>Tytuł</p>
-            <p>Liczba Stron</p>
-            <button class="status">Status</button>
-            <button class="del">X</button>
-        </div>
-        <div class="card">
-            <p>Autor</p>
-            <p>Tytuł</p>
-            <p>Liczba Stron</p>
-            <button class="status">Status</button>
-            <button class="del">X</button>
-        </div>
-        <div class="card">
-            <p>Autor</p>
-            <p>Tytuł</p>
-            <p>Liczba Stron</p>
-            <button class="status">Status</button>
-            <button class="del">X</button>
-        </div>
         <div class="card">
             <p>Autor</p>
             <p>Tytuł</p>
