Adding books to html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </form>
     </dialog>
     <button class="add" id="show_dialog">Add book</button>
-    <div class="container">
+    <div id="container">
         <div class="card">
             <p>Autor</p>
             <p>Tytuł</p>
